[package]
name = "bevy_prototype_lyon"
version = "0.1.3"
authors = ["Federico Rinaldi <gisquerin@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Draw 2D shapes and paths in Bevy."
repository = "https://github.com/Nilirad/bevy_prototype_lyon/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev="841755aaf23acfd55b375c37390daeb302c5b30b", default-features = false, features = ["render"]}
lyon = "0.16.0"

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev="841755aaf23acfd55b375c37390daeb302c5b30b", default-features = true}
